# pyfileserver

./: .gitignore  README.md  pyproject.toml
pyfileserver/: config_logger.py  fileclient.py  fileserver.py
